[gd_scene load_steps=25 format=3 uid="uid://de0yn1n3yaoaj"]

[ext_resource type="Script" path="res://objects/doors/door.gd" id="1_hja7c"]
[ext_resource type="Texture2D" uid="uid://b0eq7iu5dxkel" path="res://art/Esher/doors/doors.png" id="3_3ghf1"]
[ext_resource type="Script" path="res://interaction/interaction_area.gd" id="3_sm474"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qst01"]
size = Vector2(5.5, 65)

[sub_resource type="Animation" id="Animation_sjwp5"]
resource_name = "black_exit"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [&"black_open", &"black_closed"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 0]
}

[sub_resource type="Animation" id="Animation_jptgb"]
resource_name = "blue_exit"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [&"blue_open", &"blue_closed"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 0]
}

[sub_resource type="Animation" id="Animation_cofie"]
resource_name = "green_exit"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [&"green_open", &"green_closed"]
}

[sub_resource type="Animation" id="Animation_2uakt"]
resource_name = "purple_exit"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [&"purple_open", &"purple_closed"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 0]
}

[sub_resource type="Animation" id="Animation_qx3tp"]
resource_name = "red_exit"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [&"red_open", &"red_closed"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 0]
}

[sub_resource type="Animation" id="Animation_ughoa"]
resource_name = "yellow_exit"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"yellow_open"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_uq5e6"]
_data = {
"black_exit": SubResource("Animation_sjwp5"),
"blue_exit": SubResource("Animation_jptgb"),
"green_exit": SubResource("Animation_cofie"),
"purple_exit": SubResource("Animation_2uakt"),
"red_exit": SubResource("Animation_qx3tp"),
"yellow_exit": SubResource("Animation_ughoa")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_p1pc5"]
atlas = ExtResource("3_3ghf1")
region = Rect2(40, 1835, 212, 367)

[sub_resource type="AtlasTexture" id="AtlasTexture_yvpe7"]
atlas = ExtResource("3_3ghf1")
region = Rect2(252, 1835, 212, 367)

[sub_resource type="AtlasTexture" id="AtlasTexture_ed4wn"]
atlas = ExtResource("3_3ghf1")
region = Rect2(40, 1101, 212, 367)

[sub_resource type="AtlasTexture" id="AtlasTexture_3cg6o"]
atlas = ExtResource("3_3ghf1")
region = Rect2(252, 1101, 212, 367)

[sub_resource type="AtlasTexture" id="AtlasTexture_sow7w"]
atlas = ExtResource("3_3ghf1")
region = Rect2(42, 734, 212, 367)

[sub_resource type="AtlasTexture" id="AtlasTexture_mujry"]
atlas = ExtResource("3_3ghf1")
region = Rect2(254, 734, 212, 367)

[sub_resource type="AtlasTexture" id="AtlasTexture_e26xa"]
atlas = ExtResource("3_3ghf1")
region = Rect2(40, 1468, 212, 367)

[sub_resource type="AtlasTexture" id="AtlasTexture_wkmhc"]
atlas = ExtResource("3_3ghf1")
region = Rect2(252, 1468, 212, 367)

[sub_resource type="AtlasTexture" id="AtlasTexture_4jus8"]
atlas = ExtResource("3_3ghf1")
region = Rect2(40, 0, 212, 367)

[sub_resource type="AtlasTexture" id="AtlasTexture_2177h"]
atlas = ExtResource("3_3ghf1")
region = Rect2(252, 0, 212, 367)

[sub_resource type="AtlasTexture" id="AtlasTexture_45l30"]
atlas = ExtResource("3_3ghf1")
region = Rect2(40, 367, 212, 367)

[sub_resource type="AtlasTexture" id="AtlasTexture_yy2y4"]
atlas = ExtResource("3_3ghf1")
region = Rect2(252, 367, 212, 367)

[sub_resource type="SpriteFrames" id="SpriteFrames_iga4d"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_p1pc5")
}],
"loop": true,
"name": &"black_closed",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yvpe7")
}],
"loop": true,
"name": &"black_open",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ed4wn")
}],
"loop": true,
"name": &"blue_closed",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3cg6o")
}],
"loop": true,
"name": &"blue_open",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sow7w")
}],
"loop": true,
"name": &"green_closed",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mujry")
}],
"loop": true,
"name": &"green_open",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e26xa")
}],
"loop": true,
"name": &"purple_closed",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wkmhc")
}],
"loop": true,
"name": &"purple_open",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4jus8")
}],
"loop": true,
"name": &"red_closed",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2177h")
}],
"loop": true,
"name": &"red_open",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_45l30")
}],
"loop": true,
"name": &"yellow_closed",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yy2y4")
}],
"loop": true,
"name": &"yellow_open",
"speed": 5.0
}]

[node name="Door" type="Area2D" groups=["door"]]
script = ExtResource("1_hja7c")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(9, 7)
shape = SubResource("RectangleShape2D_qst01")

[node name="InteractionArea" type="Area2D" parent="."]
position = Vector2(9, 7)
collision_layer = 0
collision_mask = 2
script = ExtResource("3_sm474")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="InteractionArea"]
shape = SubResource("RectangleShape2D_qst01")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.3

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_uq5e6")
}

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.3, 0.3)
sprite_frames = SubResource("SpriteFrames_iga4d")
animation = &"black_closed"

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="area_entered" from="InteractionArea" to="." method="_on_interaction_area_area_entered"]
[connection signal="area_exited" from="InteractionArea" to="." method="_on_interaction_area_area_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
